--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>home - node + express</h1>
+    <h1> usuarios</h1>
 
-    <a href="/usuarios/30">Ver usuario 30</a>
-    <a href="/usuarios/496">Ver usuario 496</a>
+    <a href="/">Voltar</a>
 </body>
 </html>
