recebedno informaçoes do usuario

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
 
     <a href="/usuarios/30">Ver usuario 30</a>
     <a href="/usuarios/496">Ver usuario 496</a>
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
